added basic app functionality (mobx actions)

--- a/src/components/TaskListItem/style.module.scss
+++ b/src/components/TaskListItem/style.module.scss
@@ -1,10 +1,12 @@
 .task{
 	display: flex;
 	margin: 0 1.25rem;
+	position: relative;
 }
 
 .taskToggle{
-	margin-right: 0.75rem;
+	left: -1.25rem;
+	position: absolute;
 }
 
 .taskCheckbox{
