--- a/src/components/TaskListItem/style.module.scss
+++ b/src/components/TaskListItem/style.module.scss
@@ -1,5 +1,6 @@
 .task{
 	display: flex;
+	flex-direction: column;
 	margin: 0 1.25rem;
 	position: relative;
 }
@@ -7,8 +8,14 @@
 .taskToggle{
 	left: -1.25rem;
 	position: absolute;
+	z-index: 1;
 }
 
 .taskCheckbox{
 	margin-left: auto;
+}
+
+.subtasks{
+	display: flex;
+	flex-direction: column;
 }
