--- a/src/components/TaskForm/style.module.scss
+++ b/src/components/TaskForm/style.module.scss
@@ -4,3 +4,36 @@
 	gap: 1rem;
 	margin-top: 1.5rem;
 }
+
+.addTaskInput {
+	padding: 0.25rem;
+	border: none;
+	outline: none;
+	border-bottom: 1px solid #333;
+	padding-bottom: 1rem;
+}
+.addTaskTextarea {
+	padding: 0.25rem;
+	border: none;
+	outline: none;
+	border-bottom: 1px solid #333;
+	padding-bottom: 1rem;
+	resize: none;
+}
+.addBlockButtons {
+	display: flex;
+	justify-content: space-between;
+	gap: 1rem;
+	button {
+		width: 45%;
+
+		background-color: #85fdafc9;
+		color: #333;
+		font-size: 1rem;
+		font-weight: 700;
+		padding: 1rem 2rem;
+		border: none;
+		outline: none;
+		cursor: pointer;
+	}
+}
