--- a/src/components/TaskListItem/style.module.scss
+++ b/src/components/TaskListItem/style.module.scss
@@ -4,18 +4,39 @@
 	margin: 0 1.25rem;
 	position: relative;
 }
-
+.taskTitle{
+	margin-right: auto;
+}
 .taskToggle{
-	left: -1.25rem;
+	left: -1.5rem;
 	position: absolute;
 	z-index: 1;
+	padding: 0 0.25rem;
+	min-width: 0.75rem;
+	cursor: pointer;
+	border: 1px #333 solid;
+	text-align: center;
 }
 
 .taskCheckbox{
-	margin-left: auto;
 }
 
 .subtasks{
 	display: flex;
 	flex-direction: column;
+}
+.taskItem {
+	display: flex;
+	gap: 1.5rem;
+	padding: 1rem;
+	&:hover{
+		cursor: pointer;
+		background-color: #d4f6e080;
+	}
+}
+.current {
+	background-color: #d4f6e0;
+	&:hover{
+		background-color: #d4f6e0;
+	}
 }
