--- a/src/main.scss
+++ b/src/main.scss
@@ -1,6 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
 * {
 	margin: 0;
 	padding: 0;
+	font-family: Montserrat;
+	color: #333;
+	box-sizing: border-box;
 }
 
 .hide {
