--- a/src/components/TaskForm/style.module.scss
+++ b/src/components/TaskForm/style.module.scss
@@ -11,6 +11,9 @@
 	outline: none;
 	border-bottom: 1px solid #333;
 	padding-bottom: 1rem;
+
+	color: var(--font-color);
+	background-color: var(--bg-color);
 }
 .addTaskTextarea {
 	padding: 0.25rem;
@@ -19,6 +22,9 @@
 	border-bottom: 1px solid #333;
 	padding-bottom: 1rem;
 	resize: none;
+
+	color: var(--font-color);
+	background-color: var(--bg-color);
 }
 .addBlockButtons {
 	display: flex;
@@ -27,8 +33,8 @@
 	button {
 		width: 45%;
 
-		background-color: #85fdafc9;
-		color: #333;
+		background-color: var(--primary-color);
+		color: var(--bg-color);
 		font-size: 1rem;
 		font-weight: 700;
 		padding: 1rem 2rem;
