--- a/src/components/TaskListItem/style.module.scss
+++ b/src/components/TaskListItem/style.module.scss
@@ -1,7 +1,7 @@
 .task{
 	display: flex;
 	flex-direction: column;
-	margin: 0 1.25rem;
+	// margin: 0 1.25rem;
 	position: relative;
 }
 .taskTitle{
@@ -9,13 +9,12 @@
 }
 .taskToggle{
 	left: -1.5rem;
-	position: absolute;
 	z-index: 1;
-	padding: 0 0.25rem;
 	min-width: 0.75rem;
 	cursor: pointer;
-	border: 1px #333 solid;
 	text-align: center;
+
+	font-size: 1rem;
 }
 
 .taskCheckbox{
@@ -24,19 +23,29 @@
 .subtasks{
 	display: flex;
 	flex-direction: column;
+	margin-left: 1.25rem;
 }
 .taskItem {
 	display: flex;
 	gap: 1.5rem;
 	padding: 1rem;
+	transition: .3s;
+
+	border-bottom: 1px #33333350 solid;
+
 	&:hover{
 		cursor: pointer;
-		background-color: #d4f6e080;
+		background-color: var(--secondary-color);
+		border-bottom: 1px transparent solid;
+		color: var(--bg-color);
 	}
 }
 .current {
-	background-color: #d4f6e0;
+	background-color: var(--primary-color);
+	border-bottom: 1px transparent solid;
+	color: var(--bg-color);
 	&:hover{
-		background-color: #d4f6e0;
+		background-color: var(--primary-color);
+		color: var(--bg-color);
 	}
 }
