--- a/src/components/TaskSearch/style.module.scss
+++ b/src/components/TaskSearch/style.module.scss
@@ -2,6 +2,10 @@
 	display: flex;
 	align-items: center;
 	gap: 1rem;
+
+	@media (max-width:767px) {
+		width: 100%;
+	}
 }
 
 .searchInput {
@@ -12,4 +16,8 @@
 
 	color: var(--font-color);
 	background-color: var(--bg-color);
+
+	@media (max-width:767px) {
+		width: 100%;
+	}
 }
