--- a/src/components/Wrapper/style.module.scss
+++ b/src/components/Wrapper/style.module.scss
@@ -14,13 +14,15 @@
 	align-items: center;
 	@media screen and (max-width: 768px) {
 		flex-direction: column;
-		
+		gap: 1.5rem;
+		justify-content: left;
 	}
 }
 
 .container {
 	display: flex;
 	padding: 1.25rem 0;
+	overflow: hidden;
 	@media screen and (max-width: 768px) {
 		flex-direction: column;		
 	}
@@ -29,6 +31,9 @@
 .column {
 	padding: 1rem;
 	width: 50%;
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
 	@media screen and (max-width: 768px) {
 		width: 100%;		
 	}
