--- a/src/components/TaskSearch/style.module.scss
+++ b/src/components/TaskSearch/style.module.scss
@@ -16,7 +16,7 @@
 
 	color: var(--font-color);
 	background-color: var(--bg-color);
-
+	transition: .3s;
 	@media (max-width:767px) {
 		width: 100%;
 	}
