--- a/src/components/TaskBody/style.module.scss
+++ b/src/components/TaskBody/style.module.scss
@@ -2,6 +2,7 @@
 	display: flex;
 	background-color: var(--secondary-color);
 	padding: 0.5rem;
+	transition: .3s;
 	p {
 		word-break: break-word;
 	}
